fix: update contrast button

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,6 +68,7 @@ html {
     --text-secondary: 92, 92, 92;
     --text-tertiary: 116, 116, 116;
     --text-disabled: 138, 138, 138;
+    --text-contrast: 255, 255, 255;
     --text-success: 58, 201, 34;
     --text-error: 255, 48, 48;
     --text-info: 59, 130, 246;
@@ -136,4 +137,9 @@ html {
     --tertiary: 255, 160, 0;
     --quaternary: 183, 28, 28;
   }
+}
+
+.button-ghost:hover {
+  background: rgb(var(--divider-light));
+  transition: background 0.2s;
 }
